--- a/Bookshelf/Platforms/Android/AndroidManifest.xml
+++ b/Bookshelf/Platforms/Android/AndroidManifest.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.Xpem.Bookshelf" android:versionCode="3" android:versionName="Dev">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.Xpem.Bookshelf" android:versionCode="4" android:versionName="DevAlpha">
 	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:supportsRtl="true" android:usesCleartextTraffic="true" android:label="Bookshelf"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
